# yafc

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: ast.rs  grammar.lalrpop  grammar.pest  main.rs  parse.rs  simplify.rs
src/ast/: binary.rs  mod.rs
src/eq/: mod.rs
src/simplifier/: binary_num_ops.rs  combine_terms.rs  de_paren.rs  factorize.rs  mod.rs
yafc/: Cargo.toml
yafc/src/: ast.rs  grammar.lalrpop  lib.rs  simplifier.rs
yafc/src/ast/: build.rs  mod.rs  unary.rs
yafc/src/simplifier/: binary_num_ops.rs  combine_terms.rs  de_paren.rs  factorize.rs  unary_num_ops.rs
yafcli/: Cargo.toml
yafcli/src/: cli.rs  main.rs
