[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.7"

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
lazy_static = "1.4.0"
log = "0.4.14"
env_logger = "0.9.0"
rustyline = "9.1.2"
lalrpop-util = "0.19.7"
regex = "1.5.5"