[package]
name = "yafc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19"

[dependencies]
tracing = "0.1"
lalrpop-util = { version = "0.19", features = ["lexer"] }
regex = "1.5"
egg = "0.9"
once_cell = "1.17"
