[package]
name = "yafcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
rustyline = "10.0"
yafc = { path = "../yafc" }
clap = { version = "3.2", features = ["derive"] }
atty = "0.2"
